--- a/index.html
+++ b/index.html
@@ -416,27 +416,14 @@
             border: 1px solid rgba(var(--pink-rgb), 0.25);
             background: var(--white);
             box-shadow: 0 10px 26px rgba(var(--purple-rgb), 0.08);
-            display: grid;
-            grid-template-columns: 160px 1fr;
-            gap: 1rem;
-            align-items: center;
-            padding: 0.85rem;
-            min-height: 170px;
+            min-height: 240px;
         }
         .about-photo-panel img {
             width: 100%;
-            height: 140px;
+            height: 100%;
             object-fit: cover;
-            object-position: center;
+            object-position: center top;
             display: block;
-            border-radius: 12px;
-            border: 1px solid rgba(var(--purple-rgb), 0.1);
-        }
-        .about-photo-note {
-            color: var(--gray-900);
-            font-size: 0.9rem;
-            line-height: 1.6;
-            padding-right: 1rem;
         }
 
         /* ---- CAT ELEMENTS (SVG cartoon system) ---- */
@@ -1018,14 +1005,7 @@
             .about-right-column { gap: 1rem; }
             .about-highlights { grid-template-columns: 1fr; }
             .about-photo-panel {
-                grid-template-columns: 1fr;
-                min-height: auto;
-                padding: 0.8rem;
-            }
-            .about-photo-panel img { height: 180px; }
-            .about-photo-note {
-                font-size: 0.85rem;
-                padding-right: 0;
+                min-height: 220px;
             }
             .section-title { font-size: 2rem; }
             .nav-links { display: none; }
@@ -1464,8 +1444,7 @@
                     </div>
                 </div>
                 <div class="about-photo-panel fade-up">
-                    <img src="https://nikkihilljohnson.my.canva.site/_assets/media/098e93cac96858c266f477382f40e0ea.jpg" alt="Nikki Johnson smiling">
-                    <p class="about-photo-note">Built from Mount Pleasant, SC with strategy, storytelling, and just enough chaos to keep the internet interested.</p>
+                    <img src="1.png" alt="Nikki Johnson working at a laptop">
                 </div>
             </div>
         </div>
