--- a/index.html
+++ b/index.html
@@ -1404,23 +1404,27 @@
                     <span class="skill-tag">Content Strategy</span>
                     <span class="skill-tag">Social Media Strategy</span>
                     <span class="skill-tag">Creative Direction</span>
-                    <span class="skill-tag">Data Analytics</span>
-                    <span class="skill-tag">Strategic Copywriting</span>
+                    <span class="skill-tag">Brand Messaging</span>
+
                     <span class="skill-tag">Audience Development</span>
-                    <span class="skill-tag">Cultural Trendspotting</span>
-                    <span class="skill-tag">Paid Social Analytics</span>
-                    <span class="skill-tag">Video Production</span>
-                    <span class="skill-tag">Influencer Strategy</span>
-                    <span class="skill-tag">Cultural Strategy</span>
+                    <span class="skill-tag">Data Analytics</span>
+                    <span class="skill-tag">Paid Social Performance</span>
                     <span class="skill-tag">Marketing Operations</span>
+
+                    <span class="skill-tag">Cultural Intelligence</span>
+                    <span class="skill-tag">Influencer Strategy</span>
+                    <span class="skill-tag">Short-Form Video Strategy</span>
+
+                    <span class="skill-tag">Digital Native (Since Dial-up)</span>
                     <span class="skill-tag">Chronically Online So You Don't Have To Be</span>
+                    <span class="skill-tag">Still Not Calling It X</span>
                 </div>
             </div>
             <div class="about-right-column">
                 <div class="about-highlights">
                     <div class="highlight-card fade-up">
                         <h4>Storyteller at Heart</h4>
-                        <p>I translate brand positioning into stories people actually care about. Because facts tell, but stories sell. And yes, sometimes the story includes a meme.</p>
+                        <p>I turn brand positioning into stories people actually care about. Because facts inform, but stories move people. Occasionally the story involves a meme. I don't make the rules.</p>
                     </div>
                     <div class="highlight-card fade-up">
                         <h4>Creative With Receipts</h4>
@@ -1428,15 +1432,15 @@
                     </div>
                     <div class="highlight-card fade-up">
                         <h4>Algorithm Survivor</h4>
-                        <p>I've worked through every platform shift, reach panic, and "this changes everything" moment. Xennial status confirmed. I survived the Oregon Trail. I can survive an algorithm update.</p>
+                        <p>I've worked through every platform shift, algorithm update, and social media "the sky is falling" phase. I'm an elder millennial who survived the Oregon Trail. I can certainly survive another app death. RIP Vine.</p>
                     </div>
                     <div class="highlight-card fade-up">
-                        <h4>Full-Funnel Adult</h4>
-                        <p>Awareness is nice. Revenue is nicer. I design social and paid strategies that support the entire customer journey, not just top-of-funnel applause.</p>
+                        <h4>Strategy Beyond the Scroll</h4>
+                        <p>Likes are nice. Conversions are better. I design social and paid strategies that move people from awareness to action.</p>
                     </div>
                     <div class="highlight-card fade-up">
-                        <h4>Multitasking Gold Medalist</h4>
-                        <p>Campaigns, deadlines, kids' schedules, group chats, and whatever the school just emailed about. Marketing logistics? Honestly relaxing.</p>
+                        <h4>Organized Chaos Manager</h4>
+                        <p>Marketing moves fast. I bring structure without killing creativity.</p>
                     </div>
                     <div class="highlight-card fade-up">
                         <h4>Internet Culture Translator</h4>
@@ -1444,7 +1448,7 @@
                     </div>
                 </div>
                 <div class="about-photo-panel fade-up">
-                    <img src="1.png" alt="Nikki Johnson working at a laptop">
+                    <img src="Assets/about-typing.png" alt="Nikki Johnson working at a laptop">
                 </div>
             </div>
         </div>
