--- a/case-studies.html
+++ b/case-studies.html
@@ -55,16 +55,47 @@
 
         /* ---- HERO ---- */
         .hero {
-            padding: 9rem 2rem 5rem;
-            text-align: center;
+            padding: 9rem 2rem 0;
             background: linear-gradient(150deg, #fafafa 0%, var(--purple-light) 100%);
+            overflow: hidden;
+        }
+        .hero-inner {
+            max-width: 1100px;
+            margin: 0 auto;
+            display: grid;
+            grid-template-columns: 1fr auto;
+            align-items: flex-end;
+            gap: 2rem;
+        }
+        .hero-text {
+            padding-bottom: 4rem;
         }
         .section-label { font-size: 0.78rem; font-weight: 700; letter-spacing: 0.18em; text-transform: uppercase; color: var(--pink); margin-bottom: 1rem; display: block; }
         .hero h1 { font-family: var(--font-display); font-size: clamp(2.5rem, 5vw, 4rem); color: var(--dark); margin-bottom: 1rem; }
-        .hero p { font-size: 1.1rem; color: var(--gray-600); max-width: 520px; margin: 0 auto 2.5rem; }
-        .jump-pills { display: flex; flex-wrap: wrap; gap: 0.75rem; justify-content: center; }
+        .hero p { font-size: 1.1rem; color: var(--gray-600); max-width: 480px; margin: 0 0 2.5rem; }
+        .jump-pills { display: flex; flex-wrap: wrap; gap: 0.75rem; justify-content: flex-start; }
         .jump-pill { text-decoration: none; padding: 0.5rem 1.25rem; border-radius: 100px; border: 1.5px solid var(--gray-300); color: var(--gray-600); font-size: 0.875rem; font-weight: 500; transition: all 0.22s; }
         .jump-pill:hover { border-color: var(--pink); color: var(--pink); background: #fff0fb; }
+        .hero-photo {
+            display: flex;
+            align-items: flex-end;
+            flex-shrink: 0;
+        }
+        .hero-photo img {
+            height: 420px;
+            width: auto;
+            display: block;
+            filter: drop-shadow(0 8px 32px rgba(123,0,199,0.12));
+        }
+        @media (max-width: 820px) {
+            .hero { padding: 8rem 2rem 0; }
+            .hero-inner { grid-template-columns: 1fr; }
+            .hero-text { padding-bottom: 2rem; text-align: center; }
+            .hero p { margin: 0 auto 2.5rem; }
+            .jump-pills { justify-content: center; }
+            .hero-photo { justify-content: center; }
+            .hero-photo img { height: 300px; }
+        }
 
         /* ---- CASE STUDY WRAPPER ---- */
         .cs-section { padding: 6rem 2rem; }
@@ -224,16 +255,15 @@
 
 <!-- HERO -->
 <section class="hero">
-    <span class="section-label">Portfolio</span>
-    <h1>Case Studies</h1>
-    <p>Deep dives into the strategies, campaigns, and results that moved the needle.</p>
-    <div class="jump-pills">
-        <a href="#hvac" class="jump-pill">Home Services</a>
-        <a href="#wedmore" class="jump-pill">Personal Brand</a>
-        <a href="#stonesmith" class="jump-pill">Local Business</a>
-        <a href="#nyag" class="jump-pill">Online Education</a>
-        <a href="#cft" class="jump-pill">Nonprofit</a>
-        <a href="#mapleair" class="jump-pill">Air Purification</a>
+    <div class="hero-inner">
+        <div class="hero-text">
+            <span class="section-label">Portfolio</span>
+            <h1>Case Studies</h1>
+            <p>Real campaigns, real strategy, real results. Occasionally a meme.</p>
+        </div>
+        <div class="hero-photo">
+            <img src="Assets/Images/nikki-excited-nobg.png" alt="Nikki Johnson">
+        </div>
     </div>
 </section>
 
